--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "scripts": {
+  "start": "node server.js"
+}
 }
